Arrays.asList seems faster than List.of